change width on setting menu in media query below 700px to prevent overflow of viewport width

--- a/public/stylesheets/balance-checker.css
+++ b/public/stylesheets/balance-checker.css
@@ -1252,4 +1252,9 @@ body {
         height: auto;
         display: block;
     }
+
+    #settings-menu {
+        max-width: 400px;
+        width: auto;
+    }
 }
